<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Political Preparedness</string>
    <string name="ballot_box">Ballot Being Placed in Ballot Box</string>
    <string name="upcoming_elections">Upcoming Elections</string>
    <string name="find_my_representatives">Find My Representatives</string>
    <string name="upcoming_elections_label">Upcoming Elections</string>
    <string name="saved_elections">Saved Elections</string>
    <string name="save_election">Save Election</string>
    <string name="voting_locations">Voting Locations</string>
    <string name="ballot_info">Ballot Info</string>
    <string name="election_information">Election Information</string>

    <!-- TODO: Add necessary string values -->

</resources>
