<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!-- DONE: Add data binding node for Voter Info ViewModel -->
    <data>
        <variable
            name= "viewModel"
            type= "com.example.android.politicalpreparedness.election.VoterInfoViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/fragmentVoterInfo"
        tools:context="com.example.android.politicalpreparedness.MainActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/election_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_padding"
            android:singleLine="true"
            app:layout_constraintTop_toTopOf="parent"
            tools:text= "California Presidential Primary Election"/>

        <TextView
            android:id="@+id/election_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_padding"
            app:layout_constraintTop_toBottomOf="@id/election_name"
            tools:text="12 November 2055"/>

        <!-- TODO: Add visual styling and content -->
<!--        <TextView-->
<!--            android:id="@+id/state_header"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            app:layout_constraintTop_toBottomOf="@id/election_date"-->
<!--            app:layout_constraintStart_toStartOf="@id/election_date" />-->

        <TextView
            android:id="@+id/election_information_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/election_information"
            app:layout_constraintTop_toBottomOf="@id/election_date"
            app:layout_constraintStart_toStartOf="parent"
            android:fontFamily="sans-serif-black"
            android:padding="8dp"/>

        <TextView
            android:id="@+id/state_locations_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/voting_locations"
            android:fontFamily="sans-serif-medium"
            app:layout_constraintBottom_toTopOf="@id/state_locations"
            app:layout_constraintTop_toBottomOf="@id/election_information_header"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="8dp"/>

        <TextView
            android:id="@+id/state_locations"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/state_locations_header"
            app:layout_constraintBottom_toTopOf="@id/state_ballot_info_header"
            app:layout_constraintStart_toStartOf="@id/election_date"/>

        <TextView
            android:id="@+id/state_ballot_info_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ballot_info"
            android:layout_margin="8dp"
            android:fontFamily="sans-serif-medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/state_locations"/>

        <TextView
            android:id="@+id/state_ballot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/state_ballot_info_header"
            app:layout_constraintStart_toStartOf="parent"/>

        <androidx.constraintlayout.widget.Group
            android:id="@+id/address_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="state_correspondence_header,address" />

        <!-- DONE: Add visual styling and content -->
        <TextView
            android:id="@+id/state_correspondence_header"
            android:layout_width="1dp"
            android:layout_height="13dp"
            app:layout_constraintStart_toStartOf="@id/election_date"
            app:layout_constraintTop_toBottomOf="@id/state_ballot" />

        <!-- DONE: Add data binding -->
        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/state_correspondence_header"
            app:layout_constraintStart_toStartOf="@id/election_date" />

        <!-- DONE: Add button to save election to Room -->
        
        <Button
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_margin="30dp"
            android:text="@string/save_election"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>